# bloom-experiment

./: .gitignore  LICENSE.txt  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yml
src/: __init__.py  predict.py
